# sick_lidar_localization

./: .gitignore  CMakeLists.txt  README.md  package.xml  package_ros1.xml  package_ros2.xml
doc/: Doxyfile.in  Quickstart-Setup-SOPASair.md  backlog.md  cpp_api.md  faq.md  lls_messages.md  sequenceDiagramROSUDPMessages.txt  sequenceDiagramResultTelegrams.txt  sequenceDiagramSourceIdExample1.txt  sequenceDiagramSourceIdExample2.txt  sequenceDiagramSourceIdExample3.txt  sequenceDiagramSourceIdExample4.txt  sick_localization_recording.md  sick_localization_services.md  sim_messages.md  software_pll.md  source_id.md  timing.md
doc/specifications/: README.md
include/sick_lidar_localization/: SoftwarePLL.h  client_socket.h  cola_configuration.h  cola_converter.h  cola_encoder.h  cola_parser.h  cola_services.h  cola_transmitter.h  curl_wrapper.h  driver_check_thread.h  driver_monitor.h  driver_thread.h  fifo_buffer.h  json_parser.h  lls_transform.h  odom_converter.h  (+25 more)
launch/: lls_transform.launch  odom_msg_sender.launch  pointcloud_converter.launch  sick_lidar_localization.launch  sim_loc_driver.launch  sim_loc_driver.launch.py  sim_loc_driver_check.launch  sim_loc_test_server.launch  sim_loc_test_server.launch.py  unittest_sim_loc_parser.launch  unittest_sim_loc_parser.launch.py  verify_sim_loc_driver.launch  verify_sim_loc_driver.launch.py
msg/: CodeMeasurementMessage0303.msg  CodeMeasurementMessage0304.msg  CodeMeasurementMessage0701.msg  EncoderMeasurementMessage0202.msg  LineMeasurementMessage0403.msg  LineMeasurementMessage0404.msg  LocalizationControllerResultMessage0502.msg  OdometryMessage0101.msg  OdometryMessage0104.msg  OdometryMessage0105.msg  SickLocColaTelegramMsg.msg  SickLocDiagnosticMsg.msg  SickLocResultPortCrcMsg.msg  SickLocResultPortHeaderMsg.msg  SickLocResultPortPayloadMsg.msg  SickLocResultPortTelegramMsg.msg  SickLocResultPortTestcaseMsg.msg
sick_lidar_localization_driver/: CMakeLists.txt  package.xml  package_ros1.xml  package_ros2.xml
sick_lidar_localization_driver/include/launchparser/: launchparser.h
sick_lidar_localization_driver/include/sick_lidar_localization/: SoftwarePLL.h  curl_wrapper.h  json_parser.h  lls_transform.h  message_parser.h  message_publisher.h  sick_lidar_localization.h  sick_ros_wrapper.h  sick_services.h  udp_receiver_thread.h  udp_sender.h
sick_lidar_localization_driver/launch/: lls_transform.launch  sick_lidar_localization.launch
sick_lidar_localization_driver/src/: SoftwarePLL.cpp  curl_wrapper.cpp  gen_service_call.cpp  json_parser.cpp  lls_transform.cpp  lls_transform_thread.cpp  message_parser.cpp  sick_lidar_localization.cpp  sick_lidar_localization_main.cpp  sick_ros_wrapper.cpp  sick_services.cpp  udp_receiver_thread.cpp  udp_sender.cpp
sick_lidar_localization_driver/src/launchparser/: launchparser.cpp
sick_lidar_localization_driver/test/config/: rviz2_win64_sick_lidar_localization_pointcloud.rviz
sick_lidar_localization_msgs/: CMakeLists.txt  package.xml  package_ros1.xml  package_ros2.xml
sick_lidar_localization_msgs/msg/: CodeMeasurementMessage0303.msg  CodeMeasurementMessage0304.msg  CodeMeasurementMessage0701.msg  EncoderMeasurementMessage0202.msg  OdometryMessage0104.msg
sick_lidar_localization_msgs/srv/: LocAutoStartSavePoseSrv.srv  LocClearMapCacheSrv.srv  LocGetErrorLevelSrv.srv  LocGetLocalizationStatusSrv.srv  LocGetMapSrv.srv  LocGetSoftwareVersionSrv.srv  LocGetSystemStateSrv.srv  LocInitializeAtPoseSrv.srv  LocIsSystemReadySrv.srv  LocLoadMapToCacheSrv.srv  LocLoadPersistentConfigSrv.srv  LocRequestTimestampSrv.srv  LocResumeAtPoseSrv.srv  LocSaveRingBufferRecordingSrv.srv  LocSetKinematicVehicleModelActiveSrv.srv  LocSetLinesForSupportActiveSrv.srv  LocSetMapSrv.srv  LocSetMappingActiveSrv.srv  LocSetRecordingActiveSrv.srv  LocSetRingBufferRecordingActiveSrv.srv  LocStartSrv.srv  LocStopSrv.srv  LocSwitchMapSrv.srv
src/: SoftwarePLL.cpp  client_socket.cpp  cola_configuration.cpp  cola_converter.cpp  cola_encoder.cpp  cola_parser.cpp  cola_service_node.cpp  cola_services.cpp  cola_transmitter.cpp  curl_wrapper.cpp  driver.cpp  driver_check.cpp  driver_check_thread.cpp  driver_monitor.cpp  driver_thread.cpp  gen_service_call.cpp  json_parser.cpp  lls_transform.cpp  lls_transform_thread.cpp  odom_converter.cpp  pointcloud_converter.cpp  pointcloud_converter_thread.cpp  random_generator.cpp  result_port_parser.cpp  ros_wrapper.cpp  sick_lidar_localization.cpp  sick_lidar_localization_main.cpp  sick_ros_wrapper.cpp  sick_services.cpp  sim_loc_driver.cpp  sim_loc_driver_check.cpp  sim_loc_driver_check_thread.cpp  sim_loc_driver_monitor.cpp  sim_loc_driver_thread.cpp  sim_loc_pointcloud_converter.cpp  sim_loc_random.cpp  sim_loc_result_port_parser.cpp  sim_loc_test_server.cpp  sim_loc_test_server_thread.cpp  sim_loc_testcase_generator.cpp  (+11 more)
srv/: LocAutoStartSavePoseSrv.srv  LocClearMapCacheSrv.srv  LocGetErrorLevelSrv.srv  LocGetLocalizationStatusSrv.srv  LocGetMapSrv.srv  LocGetSoftwareVersionSrv.srv  LocGetSystemStateSrv.srv  LocInitializeAtPoseSrv.srv  LocIsSystemReadySrv.srv  LocLoadMapToCacheSrv.srv  LocLoadPersistentConfigSrv.srv  LocRequestTimestampSrv.srv  LocResumeAtPoseSrv.srv  LocSaveRingBufferRecordingSrv.srv  LocSetKinematicVehicleModelActiveSrv.srv  LocSetLinesForSupportActiveSrv.srv  LocSetMappingActiveSrv.srv  LocSetOdometryActiveSrv.srv  LocSetRecordingActiveSrv.srv  LocSetRingBufferRecordingActiveSrv.srv  LocStartLocalizingSrv.srv  LocStartSrv.srv  LocStopSrv.srv  LocSwitchMapSrv.srv  SickDevGetLidarConfigSrv.srv  SickDevGetLidarIdentSrv.srv  SickDevGetLidarStateSrv.srv  SickDevIMUActiveSrv.srv  SickDevSetIMUActiveSrv.srv  SickDevSetLidarConfigSrv.srv  SickGetSoftwareVersionSrv.srv  SickLocAutoStartActiveSrv.srv  SickLocAutoStartSavePoseIntervalSrv.srv  SickLocAutoStartSavePoseSrv.srv  SickLocColaTelegramSrv.srv  SickLocForceUpdateSrv.srv  SickLocInitialPoseSrv.srv  SickLocInitializePoseSrv.srv  SickLocMapSrv.srv  SickLocMapStateSrv.srv  (+25 more)
yaml/: message_check_default.yaml  message_check_demo.yaml  message_check_error_simu.yaml  sim_loc_driver.yaml  sim_loc_test_server.yaml
(+112 files in other folders)
